Fix modal header alignment

--- a/administrator/templates/isis/css/template.css
+++ b/administrator/templates/isis/css/template.css
@@ -8288,3 +8288,6 @@ body.modal-open {
 .modal-footer {
 	clear: both;
 }
+.modal-header {
+	text-align: left;
+}
